# task02--zoo-hodaya12

./: CMakeLists.txt  README.md
include/: Animal.h  Goose.h  Lion.h  Location.h  Monkey.h  Zoo.h  global.h
src/: Animal.cpp  CMakeLists.txt  Goose.cpp  Lion.cpp  Location.cpp  Main.cpp  Monkey.cpp  Zoo.cpp  global.cpp
